# scitrack

./: .gitattributes  .gitignore  .hgignore  .hgtags  README.rst  noxfile.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: release.yml  testing_develop.yml
scitrack/: __init__.py
src/scitrack/: __init__.py
tests/: sample-blankend-crlf.fasta  sample-blankend-lf.fasta  sample-crlf.fasta  sample.fasta  test_logging.py
trackcomp/: __init__.py
