[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "scitrack"
author = "Gavin Huttley"
author-email = "Gavin.Huttley@anu.edu.au"
home-page = "https://github.com/HuttleyLab/scitrack"
license = "BSD-3"
description-file = "README.rst"
keywords = "science, logging"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    ]
requires-python = ">=3.6"

[tool.flit.sdist]
include = ["src/*", "pyproject.toml", "*.rst"]
exclude = ["*.xml"]


[tool.flit.metadata.urls]
Documentation = "https://github.com/HuttleyLab/scitrack"
"Bug Tracker" = "https://github.com/HuttleyLab/scitrack/issues"
"Source Code" = "https://github.com/HuttleyLab/scitrack"

[tool.flit.metadata.requires-extra]
test = [
    "black",
    "isort",
    "pytest",
    "pytest-cov",
    "tox"]

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | tests/data
)/
'''

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
use_parentheses=true
